<resources>
    <string name="app_name">My Pet Agenda</string>
    <string name="title_home">Home</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_my_pets">My Pets</string>
    <string name="title_account">Account</string>
    <string name="settings">Settings</string>


    <!--Slide String -->
    <string name="welcome_to_my_pet_agenda">Welcome to My Pet Agenda</string>
    <string name="simple_easy_and_free">Simple, easy and free</string>
    <string name="don_t_forget_them">Don\'t forget them!</string>
    <string name="set_reminders_for_your_pets_so_you_don_t_miss_a_moment">Set reminders for your pet daily meals, medications or any other necessary duties.</string>
    <string name="plan_activities_to_do_with_your_pet_and_make_them_happy_and_healthy">Plan activities to do with your pet and make them healthy and happy.</string>
    <string name="be_mindful_of_their_exercise">Be mindful of their exercise!</string>
    <string name="share_the_love">Share the love!</string>
    <string name="add_people_to_your_account_so_you_can_take_care_of_your_pets_together">Add people to your account so you can take care of your pets together.</string>
    <string name="create_an_account">Create an account</string>
    <string name="join_existing_account">Join existing account</string>
    <string name="let_s_take_care_of_our_pets_join_us_and_start_now">Let\'s take care of our pets. Join us and start now!</string>
    <string name="forgot_your_password">Forgot your password? Click here!</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verification_email">Verification email sent!</string>
    <string name="code">Code</string>
    <string name="account_id">Account ID:</string>
    <string name="register_Account">Register Account</string>
    <string name="almost_there_one_more_step">Almost there. One more step!</string>
    <string name="please_verify_your_email_address_and_let_s_get_started">Please verify your email address and let\'s get started!</string>
    <string name="sign_in">Sign in</string>
    <string name="happy_cat">Happy Cat</string>
    <string name="reset_password">Reset Password</string>
    <string name="emil_sent">Email Sent!</string>
    <string name="account_holders">Account Holders</string>
    <string name="edit_profile">Profile</string>
    <string name="support_service">Support</string>
    <string name="about_us">About Us</string>
    <string name="add_pet">Add Pet</string>

    <string name="PET">pet</string>


    <string name="pref_previously_started">Has previously started</string>
    <string name="pref_account_id">accountID</string>
    <string name="pref_user_id">userId</string>

    <string name="change_photo">Change Photo</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="pet_image">Pet Image</string>
    <string name="type">Type</string>
    <string name="birthday">Birthday</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="weight">Weight</string>
    <string name="breed_if_applicable">Breed (If Applicable)</string>
    <string name="reminders">Reminders:</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="select_date">Select a date</string>
    <string name="day_s">Day(s)</string>
    <string name="add_reminder">Add reminder</string>
    <string name="add_note">Add Note</string>
    <string name="fab_note">Note</string>
    <string name="selected_pet_id">petId</string>
    <string name="please_add_a_note">Please add a note!</string>
    <string name="no_notes_to_display">No notes to display!</string>
    <string name="no_reminders_to_display">No reminders to display!</string>


    <!-- Week Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="not_recurring">Not recurring</string>
    <string name="all_days">All Days</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="change_picture">Change Picture</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_network_connection">No network connection</string>
    <string name="copy_text">Copy Text</string>
    <string name="internet_connection_required_to_make_changes">Internet connection required to make changes!</string>
    <string name="plrease_sign_in_to_make_changes">Please sign in to make changes.</string>
    <string name="please_sign_in_to_add_note">Please sign in to add new notes.</string>
    <string name="please_sign_in_to_edit_profile">Please sign in to edit pet profile.</string>
    <string name="please_upload_a_picture">Please upload a picture for your pet!</string>
    <string name="slide_image">Slide Image</string>
    <string name="kg">Kg</string>
    <string name="_22_04_2013">22/04/2013</string>

    <string name="channel_name">Alarm Channel</string>
    <string name="channel_description">Notification description</string>
    <string name="channel_id">"My_pet_agenda_channel"</string>
    <string name="notify_alarm_set">"reminder_alarm"</string>
    <string name="confirm">Confirm</string>


    <string name="CHANNEL_ID">"channel_id"</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_delete_note">Are you sure you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_delete_reminder">Are you sure you want to delete this reminder?</string>
    <string name="take_photo">Take Photo</string>
    <string name="selected_photo">selectedPhoto</string>
    <string name="no_images_to_display">No images to display!</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="lunch_image">Lunch Image</string>
    <string name="dinner_image">Dinner Image</string>
    <string name="please_insert_valid_code">Please insert a valid account code!</string>
    <string name="widget_pet_id">Widget Pet Id</string>
    <string name="widget_pet_name">Widget Pet name</string>
    <string name="please_select_a_pet_to_display_notes">Select pet to display notes!</string>
    <string name="add_to_widget">Add to Widget</string>

    <string name="about_me">
        This application was born from the love for animals and as a final project for a course. I had this idea when I was looking at my dog and was sort of pushed into it.\n\n
        This application is not only for dogs or cats but for any pet in general, initially was meant to have more functionality which I will most likely implement in the future.\n\n
        For pet lovers it is good to sometimes keep a note or a reminder to not forget important details that may slip from our heads, our pets deserve all the attention we can give them as I know they will give us theirs.
    </string>
    <string name="your_pet_needs_attention">Your pet needs attention!</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account? All data will be lost!</string>

</resources>