<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox_monday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_tuesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_wednesday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_thursday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_friday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_saturday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturday"
        android:textSize="@dimen/text_size_16"/>

    <CheckBox
        android:id="@+id/checkbox_sunday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        android:textSize="@dimen/text_size_16"/>

</LinearLayout>